chore: virtual ui thread test.